# mini_mlops_iris_dataset

PART1-iris_ipynb/: iris.ipynb
PART2-iris_py/: iris.py
PART3-MLOps_structure/: README.md  pyproject.toml
PART3-MLOps_structure/src/iris_classifier/: data.py  model.py  predict.py  train.py
PART3-MLOps_structure/tests/: test_data.py  test_model.py  test_predict.py
VibeCoded/: Dockerfile  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
VibeCoded/configs/: data.toml  logging.toml  metrics.toml  mlflow.toml  model.toml
VibeCoded/scripts/: predict.py  train.py
VibeCoded/src/iris_mlops/: __init__.py  config.py  logger.py
VibeCoded/src/iris_mlops/data/: __init__.py  loader.py
VibeCoded/src/iris_mlops/features/: preprocess.py
VibeCoded/src/iris_mlops/models/: __init__.py  evaluator.py  predictor.py  tracking.py  trainer.py
VibeCoded/src/iris_mlops/pipelines/: __init__.py  inference_pipeline.py  train_pipeline.py
VibeCoded/src/iris_mlops/scripts/: __init__.py  predict.py  train.py
VibeCoded/src/iris_mlops/utils/: __init__.py  io.py  seed.py
VibeCoded/tests/: __init__.py  conftest.py  test_config.py  test_evaluator.py  test_loader.py  test_predictor_pipeline.py  test_preprocess.py  test_trainer.py
